--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Firebase config
+android/app/google-services.json
 
 #.env
 .env.android
