--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
   firebase_auth_web: ^5.7.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/.env.web
 
   # To add assets to your application, add an assets section, like this:
   # assets:
